# fgtoolbox

./: .gitignore  README.md  fgtoolbox.cabal  run-devel.sh  stack.yaml  tags
client/: index.html  main.js  package-lock.json  package.json  style.css
client/css/: style.css
client/html/: index.html
client/js/: main.js
client/src/: ajax-form.js  components.js  main.js  templates.js
client/src/components/: base.js  tabber.js  vornav.js  wind.js
client/src/templates/: common.js  form-utils.js  spinner.js  vornav.js  wind.js
src/: Main.hs
src/FGTB/: API.hs  AStar.hs  Actions.hs  CLI.hs  FGData.hs  Geo.hs  Map.hs  Parse.hs  Route.hs  Server.hs  Types.hs  Waypoint.hs
src/FGTB/Action/: Class.hs
