name:                fgtoolbox
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/fgtoolbox#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable fgtoolbox
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules: FGTB.Types
               , FGTB.Parse
               , FGTB.Map
               , FGTB.Route
               , FGTB.AStar
               , FGTB.FGData
               , FGTB.Actions
               , FGTB.Action.Class
               , FGTB.CLI
               , FGTB.API
               , FGTB.Server
  default-language:    Haskell2010
  GHC-options: -rtsopts
  build-depends: base >=4.7 && < 5
               , geodetics
               , aeson >=1.3 && <2.0
               , bytestring
               , cairo
               , containers
               , dimensional
               , filepath
               , ini
               , lens
               , megaparsec
               , parser-combinators >=0.4 && <1
               , mtl
               , scotty
               , text
               , utf8-string
               , zlib
